--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,8 +113,16 @@ transition: all 0.3s ease-in-out;
 
 .slide_img
 {
-	height: 500px;
+	height: 300px;
 }
+
+
+.imageSlider {
+    width: 80%;
+    padding-left: 25%;
+    padding-top: 5%;
+}
+
 
 /* Carrito -----------*/
 .table-cart
@@ -146,4 +154,12 @@ transition: all 0.3s ease-in-out;
 }
 .container .navbar-brand>img {
   padding: 7px 14px;
+}
+
+
+/*  Contacto ------------*/
+.contacto{
+	margin-top: 10%;
+	font-weight: bold !important;
+	font-size: 1.6vW !important;
 }
