se han pulido las cosas

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -163,3 +163,32 @@ transition: all 0.3s ease-in-out;
 	font-weight: bold !important;
 	font-size: 1.6vW !important;
 }
+
+/*-- CSS PARA EL MENSAJE DE LAS COOKIES ------*/
+#overbox3 {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 999999;
+    display: block;
+}
+#infobox3 {
+    margin: auto;
+    position: relative;
+    top: 0px;
+    height: 58px;
+    width: 100%;
+    text-align:center;
+    background-color: #AEDEF1;
+}
+#infobox3 p {
+    line-height:58px;
+    font-size:1vw;
+    text-align:center;
+    font-weight: bold;
+}
+#infobox3 p a {
+    margin-right:5px;
+    text-decoration: underline;
+}
